
Version 1.x - 2001/05/26
------------------------
* Added wide character arguments (%ls, %ws, %S, %lc, %wc, and %C) for both
  printf and scanf.

* Added mutex callbacks for user-specified specifiers to enable applications to
  add thread-safety. These are registered with trio_register, where the
  namespace is set to either ":enter" to lock a mutex, or ":leave" to unlock a
  mutex.

* Added the possibility to specify standard support (TRIO_C99 etc.) as compiler
  options.

* Added hex-float (%a and %A) for scanning.

* Fixed conversion of hex-float in StrToDouble.

* Fixed formatting of hex-float numbers.

* Stan Boehm
  Fixed crash on QNX, which happend because some buffers on the stack were too
  big.

* Fixed default precision for %f and %g (reported by Jose Ortiz)

* Howard Kapustein
  Added the I8, I16, I32, and I64 modifiers.

* Jose Ortiz
  Fixed rounding problem for %e.

* Jose Ortiz
  Fixed various problems with the xlC and Sun C++ compilers.


Version 1.3 - 2001/05/16
------------------------
* trio's treatment of the field width when the %e code was used was not
  correct (Gisli Ottarsson reported). It turns out the fraction part should
  be zero-padded by default and the exponent part should be zero-prefixed
  if it is only one digit. At least that's how the GNU and Sun libc's work.
  The trio floating point output looks identical to them now.

* Fixed group scanning with modifiers.

* Fixed compilation for 64-bit Digital Unix.

* Igor Zlatkovic
  Fixed compilation of dprintf, which uses read/write, for MSCC.

* Fixed various compilation problems on Digital Unix (mainly associated with
  va_list).


Version 1.2 - 2001/04/11
------------------------
* Added autoconf integration. If compiled with HAVE_CONFIG_H the following
  happens. Firstly, <config.h> is included. Secondly, trio will only be
  compiled if WITH_TRIO is defined herein. Thirdly, if TRIO_REPLACE_STDIO is
  defined, only stdio functions that have not been detected by autoconf, i.e.